# kylins-client

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CUserskeniz.claude-kimicomposer_diff.txt  Test-ImapLogin.ps1  worktree-head.diff  worktree-range.diff
.claude/: settings.json
.claude/hooks/: simplify-gate.sh
.claude/skills/bugfix-unit-test/: SKILL.md
.claude/skills/engineering-review/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
assets/: design-tokens.css  design-tokens.json
docs/: README.md  architecture.md  attachment-caching-research.md  brand-guidelines.md  calendar-folder-pane-plan.md  comparison-report.md  composer-viewer-calendar-state-report.md  crypto-architecture-design.md  crypto-architecture-plan-claude.md  folder-pane-enhancement-plan.md  gmail-graph-sync-plan.md  gmail-implementation-plan.md  mail-sync-engine-research.md  mailspring-kylins-comparison.md  message-list-loading-plan.md  microsoft-graph-implementation-plan.md  openpgp-research-report.md  proton-crypto-rs-learning-report.md  thunderbird-kylins-comparison.md  thunderbird-smime-learning-report.md
docs/Exchange/: Documents_category_mapping.txt  MS-ASHTTP.txt  MS-ASWBXML.txt
docs/debug/: sync-analysis-2026-07-01.md
docs/design/: AI_Native_Gap_Analysis.md  AI_Native_design.md  AI_Security_Native_Architecture.md  AI_UI_Industry_Research.md  Competitor_AI_Research.md  Composer_AI_Inline_Design.md  Email_Future In AI Era.md  Memory_System_Design.md
docs/frontend/: message-list-incremental-update.md
docs/security/: ai-native-security-native-email-client-research.md  crypto-architecture-design.md  openpgp-crypto-ecosystem-analysis-report.md  proton-clients-security-analysis-report.md  proton-crypto-rs-source-learning-report.md  proton-webclients-security-analysis-report.md  thunderbird-crypto-implementation-analysis-report.md
docs/superpowers/design/: 2026-06-22-mailclient-main-page-design.md  2026-06-22-mailclient-visual-design.md
docs/superpowers/manual-e2e/: smime-thunderbird-interop.md
docs/superpowers/plans/: 2026-06-22-desktop-mail-client-core-platform.md  2026-06-23-account-setup.md  2026-06-27-imap-improvement-plan.md  (+53 more)
docs/thunderbird/: gap-analysis-report.md
docs/yahoo/: yahoo-imap-optimization-plan.md  yahoo-mail-support-plan.md  yahooapis.txt
kylins.client.backend/: ATTRIBUTIONS.md  Cargo.toml  LICENSE-velo.txt  package-lock.json  rustfmt.toml  tauri.conf.json
kylins.client.backend/capabilities/: default.json
kylins.client.backend/icons/: icon.icns
kylins.client.backend/migrations/: 20260627000001_baseline.sql  20260630000001_rate_limit.sql  20260701000001_purge_shell_bodies.sql  20260701000002_add_accounts_auth_type.sql  20260704000001_add_accounts_smtp_username.sql  20260705000001_contact_extraction_indexes.sql  20260705000002_task_thread_fk.sql  20260706000001_calendar_defaults.sql  20260710000001_crypto_keys.sql  20260712000001_crypto_receive.sql  20260716000001_add_remote_stable_ids.sql  20260717000001_crypto_receive_clear_signed.sql  20260718000001_backfill_crypto_flags.sql  20260718200000_crypto_keys_intermediate_type.sql  20260718300000_crypto_receive_failure_reason.sql  20260718400000_crypto_receive_revocation_reason.sql  20260719000001_add_accounts_crypto_granularity.sql  20260724000001_local_drafts_completeness.sql  20260724000002_local_drafts_intent.sql
kylins.client.backend/src/: attachment_cache.rs  commands.rs  crypto.rs  keystore_bridge.rs  lib.rs  main.rs  oauth.rs
kylins.client.backend/src/db/: accounts.rs  ai_cache.rs  attachments.rs  calendar_events.rs  calendars.rs  collected_keys.rs  commands.rs  contact_sync_state.rs  contacts.rs  crl_cache.rs  crypto_keys.rs  drafts.rs  image_allowlist.rs  labels.rs  message_bodies.rs  message_crypto_results.rs  messages.rs  mod.rs  mutations.rs  queue.rs  rate_limit.rs  scheduled_emails.rs  search.rs  send_as_aliases.rs  settings.rs  signatures.rs  sync_state.rs  tasks.rs  templates.rs  threads.rs  trust_decisions.rs
kylins.client.backend/src/eas/: auth.rs  autodiscover.rs  client.rs  commands.rs  mod.rs  provision.rs  service.rs  status.rs  types.rs
kylins.client.backend/src/eas/wbxml/: code_pages.rs  deserializer.rs  error.rs  global_tokens.rs  mod.rs  serializer.rs  tags.rs  types.rs
kylins.client.backend/src/mail/: address.rs  builder.rs  crypto.rs  crypto_crl.rs  mod.rs  pgp_mime.rs
kylins.client.backend/src/mail/imap/: client.rs  mod.rs  provider_profile.rs  session_manager.rs  types.rs
kylins.client.backend/src/mail/smtp/: client.rs  mod.rs  types.rs
kylins.client.backend/src/sync/contacts/: carddav.rs  commands.rs  eas_gal.rs  google_people.rs  mod.rs  source.rs  types.rs  vcard.rs
kylins.client.backend/src/sync_engine/: commands.rs  eas_source.rs  engine.rs  imap_source.rs  mock_source.rs  mod.rs
kylins.client.backend/tests/: crypto_core_wiring.rs  crypto_smime_lifecycle.rs  eas_integration.rs  imap_condstore_integration.rs  imap_persistent_session_integration.rs  imap_smtp_integration.rs
kylins.client.crypto/: Cargo.toml
kylins.client.crypto/core/: Cargo.toml
kylins.client.crypto/core/src/: backend.rs  envelope.rs  error.rs  handle.rs  ids.rs  keystore.rs  lib.rs  policy.rs  secret.rs  standard.rs  trust.rs  util.rs
kylins.client.crypto/openpgp/: Cargo.toml  spike-notes.md
kylins.client.crypto/openpgp/src/: engine.rs  error.rs  keymap.rs  lib.rs  policy.rs
kylins.client.crypto/openpgp/tests/: interop.rs  round_trip.rs  spike.rs
kylins.client.crypto/openpgp/tests/common/: mod.rs
kylins.client.crypto/smime/: Cargo.toml
kylins.client.crypto/smime/src/: cert.rs  chain.rs  cms_build.rs  cms_parse.rs  interop_tests.rs  lib.rs  testing.rs
kylins.client.frontend/: .prettierignore  eslint.config.mjs  index.html  package-lock.json  package.json  splashscreen.html  tsconfig.json  vite.config.ts  vitest.config.ts
kylins.client.frontend/.husky/: pre-commit
kylins.client.frontend/src/: App.tsx  main.tsx
kylins.client.frontend/tests/: App.test.tsx
screens/: outlook-02.paint
tests/styles/: themeTokens.test.ts
(+459 files in other folders)
