[package]
name = "kylins-client-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "kylins_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-autostart = "2.3.0"
tauri-plugin-deep-link = "2.2.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-log = "2.3.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-opener = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
aes-gcm = "0.10"
rand = "0.8"
keyring = { version = "3", features = ["async-secret-service"] }
hex = "0.4"
