[package]
name = "kylins-client-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kylins_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri core — upgraded from 2.5 to 2.10 to match velo upstream
tauri = { version = "2.10", features = ["tray-icon", "devtools"] }

# Tauri plugins — loosened to "2" per velo convention for easier upgrades
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"

# Async runtime — union of kylins (macros, rt) and velo (net, io-util, sync, time)
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "time"] }
futures = "0.3"

# Serialization / logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Mail protocol (ported from velo)
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.9"
# Outbound MIME builder (Stalwart) — pairs with mail-parser inbound. Send-flow hardening T1+.
mail-builder = "0.4"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
base64 = "0.22"
utf7-imap = "0.3"
socket2 = "0.5"

# HTTP for OAuth token exchange + EAS transport
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }

# Secrets (kylins original — AES-256-GCM via OS keyring)
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
# Secret hygiene: zeroizing master key + constant-time comparison
secrecy = "0.10"
zeroize = "1"
subtle = "2"
# G5 Task 3 receive orchestrator: cRLDistributionPoints URL extraction from
# signer + intermediate certs (parsed via x509-parser 0.18). Was a dev-dep
# (Plan 2 Task 6 re-parse test); promoted so the production receive pipeline
# can read CDP URLs for `fetch_crl_cached`.
x509-parser = "0.18"
# G5 Task 3: the receive orchestrator parses CMS ContentInfo to dispatch on
# id-enveloped-data vs id-signed-data, and extracts SignedData encapsulated
# content (the plaintext MIME) for the verify path. Same vendored snapshot
# crypto-smime uses. Promoted from dev-deps (where they were used by the
# Plan 2b Task 5 + Plan 4a Task 5 round-trip tests).
cms = { path = "../kylins.client.crypto/vendor/cms" }
const-oid = { version = "0.10", features = ["db"] }
der = "0.8"
# Crypto framework core (neutral envelope + KeyHandle + CryptoBackend trait).
# Workspace lives at repo-root `kylins.client.crypto/` (sibling to backend/frontend).
crypto-core = { path = "../kylins.client.crypto/core" }
# S/MIME backend (lifecycle ops land in Plan 2 Group B; the dep is wired now so
# the db-backed KeyStore bridge + future smoke tests can reference it).
crypto-smime = { path = "../kylins.client.crypto/smime" }

# Error handling for EAS client
thiserror = "1"

# vCard UID generation
uuid = { version = "1", features = ["v4"] }

# Database (Phase 0 mail-sync-engine: Rust owns the SQLite DB via sqlx).
# Runtime queries only (sqlx::query / query_as + FromRow derive) — the
# compile-time `query!` macro is NOT used (no offline cache, no DATABASE_URL),
# so `macros` is here only to support `#[derive(sqlx::FromRow)]`.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
async-trait = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
# WBXML codec + EAS command fixture tests
tokio-test = "0.4"
env_logger = "0.11"
# IMAP/SMTP integration tests against live mail servers
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
chrono = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
mail-parser = "0.9"
# Temp dirs for db migration tests
tempfile = "3"
# Plan 4a Task 5: the apply_crypto cryptographic gate asserts the p7s
# `messageDigest` signed attribute equals `SHA-256(part1)`. `sha2` is transitive
# (via crypto-smime); naming it directly here lets the test call `Sha256::digest`.
sha2 = "0.11"
# Persist + Use .p12 Chain Intermediates (2026-07-18): the `testing` feature
# exposes cert-chain + SignedData builders (`crypto_smime::testing::*`) so the
# backend's `mail/crypto.rs::tests` + `tests/crypto_smime_lifecycle.rs` can
# build a real CA → leaf chain + a SignedData whose path needs a stored
# intermediate, without duplicating the x509-cert 0.3 builder stack. NOT part
# of crypto-smime's public API; release builds of crypto-smime exclude it.
crypto-smime = { path = "../kylins.client.crypto/smime", features = ["testing"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
tray-item = { version = "0.10.0", default-features = false, features = ["ksni"] }
# `cms` reaches the backend only transitively via crypto-smime, which sources it
# from a vendored snapshot (see kylins.client.crypto/smime/Cargo.toml). No patch
# or direct dep is needed here.
