[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
secrecy = "0.10"
zeroize = "1"
subtle = "2"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
